--- a/Script1.rc
+++ b/Script1.rc
@@ -53,6 +53,11 @@ BEGIN
     BEGIN
         MENUITEM "On/Off",                      ID_MENU_SMOOTHING
     END
+	POPUP "Agent"
+	BEGIN
+		MENUITEM "Leader2 On/Off",				ID_AG_LEADER2
+		MENUITEM "Control On/Off",				ID_AG_CONTROL
+	END
 END
 
 
